Update license info

--- a/tacp/Cargo.toml
+++ b/tacp/Cargo.toml
@@ -2,8 +2,8 @@
 name = "tacp"
 version = "0.1.0"
 authors.workspace = true
-license.workspace = true
 edition.workspace = true
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 md5 = { package = "md-5", version = "~0.10.6", default-features = false, features = ["std"] }
