--- a/tacpd/Cargo.toml
+++ b/tacpd/Cargo.toml
@@ -2,8 +2,8 @@
 name = "tacpd"
 version = "0.1.0"
 authors.workspace = true
-license.workspace = true
 edition.workspace = true
+license = "GPL-2.0-only OR GPL-3.0-only"
 
 [dependencies]
 tacp = { path = "../tacp" }
