--- a/tacp/Cargo.toml
+++ b/tacp/Cargo.toml
@@ -6,5 +6,5 @@ edition.workspace = true
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-md5 = { package = "md-5", version = "~0.10.6", default-features = false, features = ["std"] }
-tracing = { version = "~0.1.40", default-features = false, features = ["attributes", "std", "tracing-attributes", "release_max_level_info"] }
+md5 = { package = "md-5", version = "~0.10.6", default-features = false }
+tracing = { version = "~0.1.40", default-features = false, features = ["attributes", "tracing-attributes", "release_max_level_info"] }
