--- a/policy.yaml
+++ b/policy.yaml
@@ -17,7 +17,10 @@ groups:
       default allow
       deny configure.*
     acct_policy:
-      file: .\acct.log
+      syslog:
+        port: 514
+        ip: 127.0.0.1
+        protocol: tcp
   testing2:
     author_policy: |
       default deny
