Make parser zero-copy and expiramental encoder. (errata exist)
This for sure has a bunch of bugs especially in the encoder but it's
good enough for the moment. Parser should be mostly ok but I think there
are some lurking bugs as well.

--- a/tacp/Cargo.toml
+++ b/tacp/Cargo.toml
@@ -7,3 +7,8 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 md5 = { package = "md-5", version = "~0.10.6", default-features = false }
+zerocopy = { version = "~0.8.8", default-features = false }
+zerocopy-derive = { version = "~0.8.8", default-features = false }
+
+[features]
+dst-construct = []
