--- a/tacpd/Cargo.toml
+++ b/tacpd/Cargo.toml
@@ -6,7 +6,7 @@ edition.workspace = true
 license = "GPL-2.0-only OR GPL-3.0-only"
 
 [dependencies]
-tacp = { path = "../tacp" }
+tacp = { path = "../tacp", features = ["dst-construct"] }
 tokio = { version = "~1.33.0", default-features = false, features = ["net", "rt", "io-util", "fs"] }
 hexdump = "0.1.1"
 smallvec = { version = "~1.11.2", default-features = false, features = ["write", "union"] }
@@ -16,3 +16,4 @@ tracing = { version = "~0.1.40", default-features = false, features = ["attribut
 tracing-subscriber = { version = "~0.3.18", default-features = false, features = ["alloc", "ansi", "fmt", "nu-ansi-term", "registry", "sharded-slab", "smallvec", "std", "thread_local", "env-filter"] }
 regex = { version = "~1.10.4", default-features = false, features = ["std", "perf", "unicode"] }
 syslog_fmt = { version = "~0.3.2", default-features = false, features = ["chrono"] }
+zerocopy = { version = "~0.8.8", default-features = false }
