Update README and License

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ resolver = "2"
 [workspace.package]
 authors = ["Andrew Piroli"]
 edition = "2021"
+license = "MIT OR Apache-2.0"
 
 [profile.dev]
 opt-level = 1
