--- a/tacpd/Cargo.toml
+++ b/tacpd/Cargo.toml
@@ -3,7 +3,7 @@ name = "tacpd"
 version = "0.1.0"
 authors.workspace = true
 edition.workspace = true
-license = "GPL-2.0-only OR GPL-3.0-only"
+license.workspace = true
 
 [dependencies]
 tacp = { path = "../tacp", features = ["dst-construct"] }
