Start on a way too complex testing structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["tacp", "tacpd", "test_client"]
+members = ["tacp", "tserver", "tclient", "ttest"]
 resolver = "2"
 
 [workspace.package]
