--- a/tclient/Cargo.toml
+++ b/tclient/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "test_client"
-version = "0.1.0"
+name = "tclient"
+version = "0.0.0"
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
