--- a/tserver/Cargo.toml
+++ b/tserver/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "tacpd"
-version = "0.1.0"
+name = "tserver"
+version = "0.0.0"
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -17,3 +17,4 @@ tracing-subscriber = { version = "~0.3.19", default-features = false, features =
 regex = { version = "~1.11.1", default-features = false, features = ["std", "perf", "unicode"] }
 syslog_fmt = { version = "~0.3.2", default-features = false, features = ["chrono"] }
 zerocopy = { version = "~0.8.13", default-features = false }
+reqwest = { version = "~0.12.15", default-features = false, features = ["blocking"] }
