--- a/tclient/Cargo.toml
+++ b/tclient/Cargo.toml
@@ -8,7 +8,7 @@ license.workspace = true
 [dependencies]
 tacp = { path = "../tacp", features = ["dst-construct"] }
 hexdump = { version = "~0.1.2", default-features = false }
-clap = { version = "^4.5.21", default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive", "env", "unicode"] }
-rand = { version = "^0.9.0-beta.1", default-features = false, features = ["std", "std_rng", "os_rng"]}
+clap = { version = "^4.5.36", default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive", "env", "unicode"] }
+rand = { version = "^0.9.0", default-features = false, features = ["std", "std_rng", "os_rng"]}
 rpassword = { version = "~7.3.1", default-features = false }
-anyhow = { version = "~1.0.94", default-features = false, features = ["std"] }
+anyhow = { version = "~1.0.98", default-features = false, features = ["std"] }
