--- a/ttest/Cargo.toml
+++ b/ttest/Cargo.toml
@@ -12,3 +12,5 @@ tokio = { version = "~1.44.2", default-features = false, features = ["net", "rt"
 serde = { version = "~1.0.219", default-features = false, features = ["derive"] }
 axum-extra = { version = "~0.10.1", default-features = false, features = [] }
 # which = "7.0.2"
+pcap-file = { version = "~3.0.0-rc1", default-features = false }
+tacp = { path = "../tacp", features = ["dst-construct"] }
