--- a/tacp/Cargo.toml
+++ b/tacp/Cargo.toml
@@ -7,8 +7,8 @@ license.workspace = true
 
 [dependencies]
 md5 = { package = "md-5", version = "~0.10.6", default-features = false }
-zerocopy = { version = "=0.8.17", default-features = false }
-zerocopy-derive = { version = "=0.8.17", default-features = false }
+zerocopy = { version = "~0.8.25", default-features = false }
+zerocopy-derive = { version = "~0.8.25", default-features = false }
 
 [features]
 dst-construct = []
