--- a/tserver/Cargo.toml
+++ b/tserver/Cargo.toml
@@ -16,5 +16,5 @@ tracing = { version = "~0.1.41", default-features = false, features = ["attribut
 tracing-subscriber = { version = "~0.3.19", default-features = false, features = ["alloc", "ansi", "fmt", "nu-ansi-term", "registry", "sharded-slab", "smallvec", "std", "thread_local", "env-filter"] }
 regex = { version = "~1.11.1", default-features = false, features = ["std", "perf", "unicode"] }
 syslog_fmt = { version = "~0.3.2", default-features = false, features = ["chrono"] }
-zerocopy = { version = "=0.8.17", default-features = false }
+zerocopy = { version = "~0.8.25", default-features = false }
 reqwest = { version = "~0.12.15", default-features = false, features = ["blocking"] }
