--- a/tacp/Cargo.toml
+++ b/tacp/Cargo.toml
@@ -9,6 +9,7 @@ license.workspace = true
 md5 = { package = "md-5", version = "~0.10.6", default-features = false }
 zerocopy = { version = "~0.8.25", default-features = false }
 zerocopy-derive = { version = "~0.8.25", default-features = false }
+itoa = { version = "~1.0.15", default-features = false }
 
 [features]
 dst-construct = []
