--- a/testing/tclient/Cargo.toml
+++ b/testing/tclient/Cargo.toml
@@ -6,7 +6,7 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-tacp = { path = "../tacp", features = ["dst-construct"] }
+tacp = { path = "../../tacp", features = ["dst-construct"] }
 hexdump = { version = "~0.1.2", default-features = false }
 clap = { version = "^4.5.36", default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive", "env", "unicode"] }
 rand = { version = "^0.9.0", default-features = false, features = ["std", "std_rng", "os_rng"]}
