--- a/tacp/Cargo.toml
+++ b/tacp/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+bitflags = { version = "~2.10.0", default-features = false }
 md5 = { package = "md-5", version = "~0.10.6", default-features = false }
 zerocopy = { version = "~0.8.27", default-features = false }
 zerocopy-derive = { version = "~0.8.27", default-features = false }
