--- a/tacp/Cargo.toml
+++ b/tacp/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tacp"
-version = "0.1.0"
+version = "0.0.0-alpha"
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -14,7 +14,6 @@ zerocopy-derive = { version = "~0.8.27", default-features = false }
 [features]
 default = ["obfuscation"]
 obfuscation = ["dep:md5"]
-dst-construct = []
 
 [lints.clippy]
 len_without_is_empty = "allow"
