--- a/testing/ttest/Cargo.toml
+++ b/testing/ttest/Cargo.toml
@@ -13,4 +13,4 @@ serde = { version = "~1.0.219", default-features = false, features = ["derive"] 
 axum-extra = { version = "~0.10.1", default-features = false, features = [] }
 # which = "7.0.2"
 pcap-file = { version = "~3.0.0-rc1", default-features = false }
-tacp = { path = "../../tacp", features = ["dst-construct"] }
+tacp = { path = "../../tacp" }
