--- a/tacp/Cargo.toml
+++ b/tacp/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tacp"
-version = "0.0.0-alpha"
+version = "0.0.0-beta0"
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
